Fix alignment of mobile menu icons #301

--- a/src/static/css/2019.css
+++ b/src/static/css/2019.css
@@ -403,6 +403,9 @@ p.copyright {
   }
   .menu .misc {
     width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
   }
 
   /* Footer */
